@@ -246,12 +246,6 @@ sub resolve_resources {
       confess "Can't find config file \"$config_file\"";
     }
     
-    my $resource_file = $config_file;
-    $resource_file =~ s/\.config/\.a/;
-    unless (-f $resource_file) {
-      confess "Can't find resource file \"$resource_file\"";
-    }
-    
     # Config file
     if (defined $config_file) {
       $found_resources_h->{$resource}++;
@@ -261,21 +255,6 @@ sub resolve_resources {
       my $depend_resources = $config->resources;
       
       for my $depend_resource (@$depend_resources) {
-        my $depend_config_file = $self->get_config_file_from_class_name($depend_resource);
-
-        my $depend_resource_file = $depend_config_file;
-        $depend_resource_file =~ s/\.config/\.a/;
-        
-        unless (-f $depend_resource_file) {
-          confess "Can't find dependent resource file \"$depend_resource_file\"";
-        }
-        
-        my $mod_time_depend_resource_file = (stat($depend_resource_file))[9];
-        my $mod_time_resource_file = (stat($resource_file))[9];
-        unless ($mod_time_resource_file > $mod_time_depend_resource_file) {
-          confess "Resource file \"$resource_file\" must be newer than the dependent resource file \"$depend_resource_file\". Resource \"$resource\" must be re-compiled";
-        }
-        
         unshift @all_resources, @$depend_resources;
       }
     }
@@ -285,6 +264,18 @@ sub resolve_resources {
   }
   
   return \@found_resources;
+}
+
+sub get_src_dir_from_class_name {
+  my ($self, $class_name) = @_;
+  
+  my $module_file = $self->builder->get_module_file($class_name);
+  my $module_rel_file = SPVM::Builder::Util::convert_class_name_to_rel_file($class_name, 'spvm');
+  
+  my $src_dir = $module_file;
+  $src_dir =~ s|/\Q$module_rel_file\E$||;
+  
+  return $src_dir;
 }
 
 sub get_config_file_from_class_name {
@@ -749,34 +740,36 @@ sub link {
     my $resources = $config->resources;
     my $resources_all_depend = $self->resolve_resources($class_name, $resources);
     for my $resource (@$resources_all_depend) {
-      my $config_file = $self->get_config_file_from_class_name($resource);
       
-      my $static_lib_file = $config_file;
-      $static_lib_file =~ s/\.config$/\.a/;
-      if (-f $static_lib_file) {
-        # Check resource symbol duplication
-        my @symbol_lines = `nm $static_lib_file`;
-        for my $symbol_line (@symbol_lines) {
-          my ($address, $type, $symbol_name) = split(/\s+/, $symbol_line);
-          if ($type eq 'T') {
-            $symbol_names_h->{$symbol_name}++;
-            if ($symbol_names_h->{$symbol_name} > 1) {
-              confess "Duplicate symbol $symbol_name using resource \"$resource\"";
-            }
-          }
+      # Build native classes
+      my $builder_cc_resource = SPVM::Builder::CC->new(
+        build_dir => $self->builder->build_dir,
+        category => 'native',
+        builder => $self->builder,
+        quiet => $self->quiet,
+        force => $self->force,
+      );
+      
+      my $src_dir = $self->get_src_dir_from_class_name($resource);
+      my $object_dir = $self->builder->create_build_object_path;
+      
+      my $object_files = $builder_cc_resource->compile(
+        $resource,
+        {
+          src_dir => $src_dir,
+          object_dir => $object_dir,
         }
+      );
+      
+      for my $object_file (@$object_files) {
         my $object_file_info = SPVM::Builder::ObjectFileInfo->new(
-          object_file => $static_lib_file,
+          object_file => $object_file,
           class_name => $resource,
           is_exe_config => 0,
           is_resource => 1,
-          is_lib_file => 1,
         );
         
         push @$all_object_file_infos, $object_file_info;
-      }
-      else {
-        confess "Can't find resource static library file \"$static_lib_file\"";
       }
     }
   }
@@ -931,25 +924,6 @@ sub link {
           my $lds_content = SPVM::Builder::Util::slurp_binary($lds_file);
           print "[$lds_file]\n$lds_content\n";
         }
-      }
-    }
-
-    # Create a resource.
-    # This is a static library. 
-    # This contains the object files that is compiled from native source files.
-    if ($category eq 'native') {
-      my $resource_static_lib_rel_file = SPVM::Builder::Util::convert_class_name_to_category_rel_file($class_name, $category, 'a');
-      my $resource_static_lib_file = "$lib_dir/$resource_static_lib_rel_file";
-      if (-f $resource_static_lib_file) {
-        unlink $resource_static_lib_file
-          or confess "Can't delete file \"$resource_static_lib_file\":$!";
-      }
-      my @native_source_object_file_infos = grep { $_->is_native_source } @$all_object_file_infos;
-      
-      if (@native_source_object_file_infos) {
-        my @native_source_object_files = map { "$_" } @native_source_object_file_infos;
-        my @ar_cmd = ('ar', 'rc', $resource_static_lib_file, @native_source_object_files);
-        $cbuilder->do_system(@ar_cmd);
       }
     }
   }
